Homepage Desktop Completa - 100%

--- a/index.html
+++ b/index.html
@@ -57,11 +57,9 @@
 
                          <span class="carousel-control-prev-icon" aria-hidden="true">
                               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                                   <svg>
-
-                                        <path
-                                             d="M256 0C114.6 0 0 114.6 0 256c0 141.4 114.6 256 256 256s256-114.6 256-256C512 114.6 397.4 0 256 0zM310.6 345.4c12.5 12.5 12.5 32.75 0 45.25s-32.75 12.5-45.25 0l-112-112C147.1 272.4 144 264.2 144 256s3.125-16.38 9.375-22.62l112-112c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L221.3 256L310.6 345.4z" />
-                                   </svg>
+                                   <path
+                                        d="M256 0C114.6 0 0 114.6 0 256c0 141.4 114.6 256 256 256s256-114.6 256-256C512 114.6 397.4 0 256 0zM310.6 345.4c12.5 12.5 12.5 32.75 0 45.25s-32.75 12.5-45.25 0l-112-112C147.1 272.4 144 264.2 144 256s3.125-16.38 9.375-22.62l112-112c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L221.3 256L310.6 345.4z" />
+                              </svg>
                          </span>
                          <span class="visually-hidden"></span>
 
@@ -71,7 +69,6 @@
                          data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
                          <span class="carousel-control-next-icon" aria-hidden="true">
                               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-
                                    <path
                                         d="M256 0C114.6 0 0 114.6 0 256c0 141.4 114.6 256 256 256s256-114.6 256-256C512 114.6 397.4 0 256 0zM358.6 278.6l-112 112c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25L290.8 256L201.4 166.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l112 112C364.9 239.6 368 247.8 368 256S364.9 272.4 358.6 278.6z" />
                               </svg>
@@ -85,6 +82,27 @@
      <a href="https://api.whatsapp.com/send?phone=1128376428" target="_blank" class="btn-wsp">
           <img src="./images/icon-wp.png" alt="" class="img_wsp">
      </a>
+
+     <!-- Detalles -->
+     <section class="home-details-allcontainer">
+          <div class="home-details-container">
+               <div class="home-details-text">
+                    <h3 class="home-details-text__pretitle">Estamos en los</h3>
+                    <h1 class="home-details-text__title">DETALLES</h1>
+                    <p class="home-details-text__paragraph">Somos una pequeña empresa argentina que realiza piezas artesanales de primera calidad, hechas con madera, hierro y cuero, las cuales harán vestir tu casa<span class="empty">.</span> 
+                    </p>
+               </div>
+               <div class="home-details__img-col-1">
+                    <img class="single-detail-img" src="https://i.ibb.co/F8m2ph1/detalles02.png" alt="detalles02" border="0">
+               </div>
+               <div class="home-details__img-col-2">
+                    <img class="home-details__img-col-2_img1" src="https://i.ibb.co/YbK4X7j/detalles01.png" alt="detalles01" border="0">
+                    <img class="home-details__img-col-2_img2" src="https://i.ibb.co/5jdyCgQ/detalles03.png" alt="detalles03" border="0">
+               </div>
+
+          </div>       
+     </section>
+
      <!-- Productos -->
      <section class="home-product container">
           <div class="container-products">
@@ -104,8 +122,7 @@
                <div class=" mt-5 row gx-3 gy-3">
                     <div class="card col-md-6 col-lg-4 col-xl-3 p-2 m-3" style="width: 18rem;">
                          <img src="https://i.ibb.co/m0fFZMv/productos01.png"" class=" card-img-top" alt="...">
-                         <div class="card-body 
-                    ">
+                         <div class="card-body">
                               <h5 class="card-title">Prueba</h5>
                               <p class="card-text">Some quick example text to build on the Prueba and make up the bulk
                                    of
@@ -226,6 +243,32 @@
                </div>
           </div>
      </section>
+
+     <!-- Payment & Shipment -->
+     <section class="payment-shipment-container">
+          <div class="payment-shipment__boxes shipment-box1">
+               <img src="./images/creditcard.png" alt="">
+               <div class="shipment-info-container">
+                    <h6 class="shipment-item-title">ACEPTAMOS TRANSFERENCIA BANCARIA Y MERCADO PAGO</h6>
+                    <p class="shipment-item-text">
+                         Consultanos por nuestro whatsapp por otros medios de pago habilitados
+                    </p>
+               </div>
+          </div>
+          <div class="payment-shipment__boxes shipment-box2">
+               <img src="./images/truck.png" alt="">
+               <div class="shipment-info-container">
+                    <h6 class="shipment-item-title">ENVÍOS A TODO EL PAÍS</h6>
+               </div>
+          </div>
+          <div class="payment-shipment__boxes shipment-box3">
+               <img src="./images/medal.png" alt="">
+               <div class="shipment-info-container">
+                    <h6 class="shipment-item-title">NUESTROS PRODUCTOS TIENEN GARANTÍA DE POR VIDA</h6>
+               </div>
+          </div>
+     </section>
+
      <!-- contacto -->
      <section class="home-contact">
           <p class="question">
