--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="navbar">
          <div class="navbar__container">
             <a href="#">
-               <img
+               <img class="navbar__logo"
                   src="https://i.ibb.co/GtMT87R/logo.png"
                   alt="logo"
                   border="0"
@@ -139,11 +139,10 @@
             <div class="home-details-text">
                <h3 class="home-details-text__pretitle">Estamos en los</h3>
                <h1 class="home-details-text__title">DETALLES</h1>
-               <p class="home-details-text__paragraph">
-                  Somos una pequeña empresa argentina que realiza piezas
+               <p class="home-details-text__paragraph paragraph1">
+                  <span class="empty">Somos una pequeña empresa argentina que realiza piezas
                   artesanales de primera calidad, hechas con madera, hierro y
-                  cuero, las cuales harán vestir tu casa<span class="empty"
-                     >.</span
+                  cuero, las cuales harán vestir tu casa.</span
                   >
                </p>
             </div>
@@ -391,7 +390,7 @@
       <!-- Payment & Shipment -->
       <section class="payment-shipment-container">
          <div class="payment-shipment__boxes shipment-box1">
-            <img src="./images/creditcard.png" alt="" />
+            <img class="payment-shipment__boxes-img" src="./images/creditcard.png" alt="" />
             <div class="shipment-info-container">
                <h6 class="shipment-item-title">
                   ACEPTAMOS TRANSFERENCIA BANCARIA Y MERCADO PAGO
@@ -403,13 +402,13 @@
             </div>
          </div>
          <div class="payment-shipment__boxes shipment-box2">
-            <img src="./images/truck.png" alt="" />
+            <img class="payment-shipment__boxes-img" src="./images/truck.png" alt="" />
             <div class="shipment-info-container">
                <h6 class="shipment-item-title">ENVÍOS A TODO EL PAÍS</h6>
             </div>
          </div>
          <div class="payment-shipment__boxes shipment-box3">
-            <img src="./images/medal.png" alt="" />
+            <img class="payment-shipment__boxes-img" src="./images/medal.png" alt="" />
             <div class="shipment-info-container">
                <h6 class="shipment-item-title">
                   NUESTROS PRODUCTOS TIENEN GARANTÍA DE POR VIDA
@@ -424,7 +423,7 @@
          <h2 class="home-contact__title">CONTACTANOS</h2>
          <img class="arrow-img" src="./images/arrow.png" alt="Arrow" />
          <p class="home-contact__description">
-            ¡Escribinos por Whatsapp ó Instagram!
+            ¡Escribinos por Whatsapp o Instagram!
          </p>
          <p class="home-contact__description">
             Estaremos encantados de responder todas tus inquietudes.
@@ -500,5 +499,6 @@
          crossorigin="anonymous"
       ></script>
       <script src="./js/nav_bar.js"></script>
+      <script src="./js/paymentInfo.js"></script>
    </body>
 </html>
