--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             data-bs-interval="false">
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img src="https://i.ibb.co/kGYvbYy/slide.png" alt="slide" border="0" class="slide-img" />
+                  <img src="https://i.ibb.co/kGYvbYy/slide.png" alt="slide" border="0" class="slide-img d-block w-100" />
                </div>
                <div class="carousel-item">
-                  <img src="https://i.ibb.co/kGYvbYy/slide.png" alt="slide" border="0" class="slide-img" />
+                  <img src="https://i.ibb.co/kGYvbYy/slide.png" alt="slide" border="0" class="slide-img d-block w-100" />
                </div>
                <div class="carousel-item">
-                  <img src="https://i.ibb.co/kGYvbYy/slide.png" alt="slide" border="0" class="slide-img" />
+                  <img src="https://i.ibb.co/kGYvbYy/slide.png" alt="slide" border="0" class="slide-img d-block w-100" />
                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
@@ -109,7 +109,7 @@
    <!-- Productos -->
    <section class="home-product container" id="productos">
       <div class="container-products">
-         <div class="prueba">
+         <div class="container_title_products">
             <div class="container-title">
                <span class="upper-title"> Nuestros </span>
                <h1 class="home-contact__title__products">PRODUCTOS</h1>
@@ -126,7 +126,7 @@
 
                 
             </div>
-         <div class="mt-5 row gx-3 gy-3" id="contenedorProductos">
+         <div class="mt-4 row gx-0 gy-3 justify-content-around container" id="contenedorProductos">
 
          </div>
    </section>
@@ -228,8 +228,10 @@ integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="ano
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"></script>
+      <!-- NavBar -->
    <script src="./js/nav_bar.js"></script>
-   <script src="./js/paymentInfo.js"></script>
+   <!-- PaymentInfo -->
+ <script src="./js/paymentInfo.js"></script> 
    <!-- RenderProductos -->
    <script src="./js/renderProduct.js"></script>
    <!-- Filter -->
