--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
    </nav>
    
    <!-- Slide -->
-   <header class="SPA">
-      <section class="section-slide">
+   
+
+    
+      <header class="carousel slide "> 
          <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false"
             data-bs-interval="false">
             <div class="carousel-inner">
@@ -53,37 +55,36 @@
                <div class="carousel-item">
                   <img src="https://i.ibb.co/kGYvbYy/slide.png" alt="slide" border="0" class="slide-img d-block w-100" />
                </div>
+               <div class="container__text text-start">
+                  <h2 class="text-container text-white">MADERA + CUERO</h2>
+              </div> 
+               <div class="container__btn text-center ">
+                  <button class="btn__products btn btn-primary mt-3"> Ver Productos</button>
+              </div> 
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
                data-bs-slide="prev">
                <span class="carousel-control-prev-icon" aria-hidden="true">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                     <path
-                        d="M256 0C114.6 0 0 114.6 0 256c0 141.4 114.6 256 256 256s256-114.6 256-256C512 114.6 397.4 0 256 0zM310.6 345.4c12.5 12.5 12.5 32.75 0 45.25s-32.75 12.5-45.25 0l-112-112C147.1 272.4 144 264.2 144 256s3.125-16.38 9.375-22.62l112-112c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L221.3 256L310.6 345.4z" />
-                  </svg>
+                  <img src="./images/back.png"/>     
                </span>
                <span class="visually-hidden"></span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching"
                data-bs-slide="next">
-               <span class="carousel-control-next-icon" aria-hidden="true">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                     <path
-                        d="M256 0C114.6 0 0 114.6 0 256c0 141.4 114.6 256 256 256s256-114.6 256-256C512 114.6 397.4 0 256 0zM358.6 278.6l-112 112c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25L290.8 256L201.4 166.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l112 112C364.9 239.6 368 247.8 368 256S364.9 272.4 358.6 278.6z" />
-                  </svg>
-               </span>
-               <span class="visually-hidden">Next</span>
+               <img src="./images/next.png"/>              
             </button>
          </div>
-      </section>
-   </header>
+         <span class="SPA"/>
+       
+      </header>
+   
    <!-- Whatsapp -->
    <a href="https://api.whatsapp.com/send?phone=1128376428" target="_blank" class="btn-wsp">
       <img src="./images/icon-wp.png" alt="" class="img_wsp" />
    </a>
 
    <!-- Detalles -->
-   <section class="home-details-allcontainer SPA" id="detalles">
+   <section class=" SPA container" id="detalles">
       <div class="home-details-container">
          <div class="home-details-text">
             <h3 class="home-details-text__pretitle">Estamos en los</h3>
@@ -234,8 +235,8 @@ integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="ano
    <script src="./js/nav_bar.js"></script>
    <!-- PaymentInfo -->
    <script src="./js/paymentInfo.js"></script> 
-   <!-- RenderProductos
-   <script type="module" src="./js/renderProduct.js"></script> -->
+   RenderProductos
+   <script type="module" src="./js/renderProduct.js"></script>
    <!-- Filter -->
    <script type="module" src="./js/filter.js"></script>
 
