--- a/index.html
+++ b/index.html
@@ -36,12 +36,8 @@
             </li>
          </ul>
       </div>
-   </nav>
-   
-   <!-- Slide -->
-   
-
-    
+   </nav>   
+   <!-- Slide --> 
       <header class="carousel slide "> 
          <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false"
             data-bs-interval="false">
@@ -57,6 +53,7 @@
                </div>
                <div class="container__text text-start">
                   <h2 class="text-container text-white">MADERA + CUERO</h2>
+                  
               </div> 
                <div class="container__btn text-center ">
                   <button class="btn__products btn btn-primary mt-3"> Ver Productos</button>
@@ -65,13 +62,13 @@
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
                data-bs-slide="prev">
                <span class="carousel-control-prev-icon" aria-hidden="true">
-                  <img src="./images/back.png"/>     
+                  <img src="./images/back.png" class="img-arrow"/>     
                </span>
                <span class="visually-hidden"></span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching"
                data-bs-slide="next">
-               <img src="./images/next.png"/>              
+               <img src="./images/next.png"  class="img-arrow"/>              
             </button>
          </div>
          <span class="SPA"/>
@@ -84,7 +81,7 @@
    </a>
 
    <!-- Detalles -->
-   <section class=" SPA container" id="detalles">
+   <section class=" SPA container__detail__spa" id="detalles">
       <div class="home-details-container">
          <div class="home-details-text">
             <h3 class="home-details-text__pretitle">Estamos en los</h3>
