Proyecto completo 100% - Resta solamente agregar productos al JSON

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
    <!-- NavBar -->
    <nav class="navbar">
       <div class="navbar__container">
-         <a href="#">
-            <img class="navbar__logo" src="https://i.ibb.co/GtMT87R/logo.png" alt="logo" border="0" /></a>
+         <a class="navbar__linklogo" href="#">
+            <img class="navbar__logo" src="https://i.ibb.co/GtMT87R/logo.png" alt="logo" border="0" />
+         </a>
          <div class="navbar__toggle" id="mobile-menu">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -38,7 +39,7 @@
       </div>
    </nav>   
    <!-- Slide --> 
-      <header class="carousel slide "> 
+      <header class="carousel slide SPA"> 
          <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false"
             data-bs-interval="false">
             <div class="carousel-inner">
@@ -232,8 +233,8 @@ integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="ano
    <script src="./js/nav_bar.js"></script>
    <!-- PaymentInfo -->
    <script src="./js/paymentInfo.js"></script> 
-   RenderProductos
-   <script type="module" src="./js/renderProduct.js"></script>
+   <!-- RenderProductos
+   <script type="module" src="./js/renderProduct.js"></script>-->
    <!-- Filter -->
    <script type="module" src="./js/filter.js"></script>
 
