--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    <!-- NavBar -->
    <nav class="navbar">
       <div class="navbar__container">
-         <a class="navbar__linklogo" href="#">
+         <a class="navbar__linklogo" href="index.html">
             <img class="navbar__logo" src="https://i.ibb.co/GtMT87R/logo.png" alt="logo" border="0" />
          </a>
          <div class="navbar__toggle" id="mobile-menu">
@@ -84,7 +84,7 @@
    
    <!-- Whatsapp -->
    <a href="https://api.whatsapp.com/send?phone=1128376428" target="_blank" class="btn-wsp">
-      <img src="./images/icon-wp.png" alt="" class="img_wsp" />
+      <img src="./images/icons/icon-wp.png" alt="" class="img_wsp" />
    </a>
 
    <!-- Detalles -->
@@ -123,11 +123,11 @@
          <div class="row g-0">
             <div class="d-flex flex-wrap justify-content-center mt-5 filter-button-group">
 
-                <span type="button" class="btn m-2 text-dark " id="filtroTodos">Todos</span>
+                <span type="button" class="m-2 text-dark filterBtn" id="filtroTodos">Todos</span>
 
-                <span type="button" class="btn m-2 text-dark" id="filtroMadera">Madera</span>
+                <span type="button" class="m-2 text-dark filterBtn" id="filtroMadera">Madera</span>
 
-                <span type="button" class="btn m-2 text-dark" id="filtroHierro">Hierro</span>
+                <span type="button" class="m-2 text-dark filterBtn" id="filtroHierro">Hierro</span>
 
                 
             </div>
@@ -180,7 +180,7 @@
    </section>
    <footer class="footer-container">
       <div class="footer-details-container">
-         <a href="#" class="footer-logo"><img class="footer-img-logo" src="https://i.ibb.co/gR8JBMV/logo-Footer.png"
+         <a href="#" class="footer-logo"><img class="footer-img-logo" src="./images/icons/logo-Footer.png"
                alt="Footer logo" border="0" /></a>
          <div class="footer-rest">
             <div class="footer-details">
@@ -208,7 +208,7 @@
             <div class="footer-details">
                <h4 class="footer-details__title">Seguinos</h4>
                <div class="footer-details__links">
-                  <a href="#"><img class="footer-social" src="./images/icons/instagram.png" alt="Instagram" /></a>
+                  <a href="https://instagram.com/elmalacara.handcrafted" target="__blank"><img class="footer-social" src="./images/icons/instagram.png" alt="Instagram" /></a>
                   <a href="#"><img class="footer-social" src="./images/icons/facebook.png" alt="Facebook" /></a>
                </div>
             </div>
