Agregue el zoom del slide

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                <a href="#detalles" class="navbar__links" id="detalles-home">QUIÉNES SOMOS</a>
             </li>
             <li class="navbar__item">
-               <a href="#productos" class="navbar__links" id="producto-home">NUESTROS PRODUCTOS</a>
+               <a href="#productos_view" class="navbar__links" id="producto-home">NUESTROS PRODUCTOS</a>
             </li>
             <li class="navbar__item">
                <a href="#contacto" class="navbar__links" id="contacto-home">CONTACTO</a>
