--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                <a href="#detalles" class="navbar__links" id="detalles-home">QUIÉNES SOMOS</a>
             </li>
             <li class="navbar__item">
-               <a href="#productos" class="navbar__links" id="producto-home">NUESTROS PRODUCTOS</a>
+               <a href="#productos_view" class="navbar__links" id="producto-home">NUESTROS PRODUCTOS</a>
             </li>
             <li class="navbar__item">
                <a href="#contacto" class="navbar__links" id="contacto-home">CONTACTO</a>
@@ -58,10 +58,7 @@
                <div class="carousel-item">
                   <img src="./images/slide/slide_03.jpg" alt="slide" border="0" class="slide-img d-block w-100" />
                </div>
-               <div class="container__text text-start">
-                  <h2 class="text-container text-white">MADERA + CUERO</h2>
-                  
-              </div> 
+               
                <div class="container__btn text-center ">
                   <a href="#productos_view"><button class="btn__products btn btn-primary mt-3" > Ver Productos</button></a>
               </div> 
