--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                   <img src="./images/slide/slide_03.jpg" alt="slide" border="0" class="slide-img d-block w-100" />
                </div>
                
-               <div class="container__btn text-center ">
-                  <a href="#productos_view"><button class="btn__products btn btn-primary mt-3" > Ver Productos</button></a>
+               <div class="container__btn">
+                  <a href="#productos_view"><button class="btn__products btn mt-3" >VER PRODUCTOS</button></a>
               </div> 
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
@@ -97,12 +97,12 @@
             </p>
          </div>
          <div class="home-details__img-col-1">
-            <img class="single-detail-img" src="https://i.ibb.co/F8m2ph1/detalles02.png" alt="detalles02" border="0" />
+            <img class="single-detail-img" src="./images/detalles/1.png" alt="detalles02" border="0" />
          </div>
          <div class="home-details__img-col-2">
-            <img class="home-details__img-col-2_img1" src="https://i.ibb.co/YbK4X7j/detalles01.png" alt="detalles01"
+            <img class="home-details__img-col-2_img1" src="./images/detalles/2.png" alt="detalles01"
                border="0" />
-            <img class="home-details__img-col-2_img2" src="https://i.ibb.co/5jdyCgQ/detalles03.png" alt="detalles03"
+            <img class="home-details__img-col-2_img2" src="./images/detalles/3.png" alt="detalles03"
                border="0" />
          </div>
       </div>
@@ -192,13 +192,10 @@
                <h4 class="footer-details__title">Dónde estamos</h4>
                <ul class="footer-details__description">
                   <li class="footer-details__item">
-                     San Isidro (Casa Central)
+                     Beccar (Casa Central)
                   </li>
                   <li class="footer-details__item">
-                     Córdoba (Punto de venta)
-                  </li>
-                  <li class="footer-details__item">
-                     Bariloche (Punto de venta)
+                     Recoleta (Showroom)
                   </li>
                </ul>
             </div>
