--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
          </div>
          <ul class="navbar__menu">
             <li class="navbar__item">
-               <a href="#detalles" class="navbar__links" id="detalles-home">QUIÉNES SOMOS</a>
+               <a href="#detalles" class="navbar__links active" id="detalles-home">QUIÉNES SOMOS</a>
             </li>
             <li class="navbar__item">
-               <a href="#productos_view" class="navbar__links" id="producto-home">NUESTROS PRODUCTOS</a>
+               <a href="#productos_view" class="navbar__links " id="producto-home">NUESTROS PRODUCTOS</a>
             </li>
             <li class="navbar__item">
-               <a href="#contacto" class="navbar__links" id="contacto-home">CONTACTO</a>
+               <a href="#contacto" class="navbar__links " id="contacto-home">CONTACTO</a>
             </li>
          </ul>
       </div>
@@ -128,7 +128,7 @@
 
                 
             </div>
-         <div class="mt-4 row gx-0 gy-3 justify-content-around container" id="contenedorProductos">
+         <div class="mt-4 row gx-0 gy-3 justify-content-center container" id="contenedorProductos">
 
          </div>
    </section>
@@ -203,7 +203,7 @@
                <h4 class="footer-details__title">Seguinos</h4>
                <div class="footer-details__links">
                   <a href="https://instagram.com/elmalacara.handcrafted" target="__blank"><img class="footer-social" src="./images/icons/instagram.png" alt="Instagram" /></a>
-                  <a href="#"><img class="footer-social" src="./images/icons/facebook.png" alt="Facebook" /></a>
+                  <a href="https://www.facebook.com/profile.php?id=100063442916645"><img class="footer-social" src="./images/icons/facebook.png" alt="Facebook" /></a>
                </div>
             </div>
          </div>
