--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    <nav class="navbar">
       <div class="navbar__container">
          <a class="navbar__linklogo" href="index.html">
-            <img class="navbar__logo" src="https://i.ibb.co/GtMT87R/logo.png" alt="logo" border="0" />
+            <img class="navbar__logo" src="./images/navbar/logo.png" alt="logo" border="0" />
          </a>
          <div class="navbar__toggle" id="mobile-menu">
             <span class="bar"></span>
@@ -32,13 +32,13 @@
          </div>
          <ul class="navbar__menu">
             <li class="navbar__item">
-               <a href="#detalles" class="navbar__links active" id="detalles-home">QUIÉNES SOMOS</a>
+               <a href="#detalles" class="navbar__links" id="detalles-home">QUIÉNES SOMOS</a>
             </li>
             <li class="navbar__item">
                <a href="#productos_view" class="navbar__links " id="producto-home">NUESTROS PRODUCTOS</a>
             </li>
             <li class="navbar__item">
-               <a href="#contacto" class="navbar__links " id="contacto-home">CONTACTO</a>
+               <a href="#contacto" class="navbar__links " id="contacto-home">CONTACTANOS</a>
             </li>
          </ul>
       </div>
@@ -53,17 +53,17 @@
                   <img src="./images/slide/slide_01.jpg" alt="slide" border="0" class="slide-img d-block w-100" />
                </div>
                <div class="carousel-item">
-                  <img src="./images/slide/slide_02.jpg" alt="slide" border="0" class="slide-img d-block w-100" />
+                  <img src="./images/slide/slide_03.jpg" alt="slide" border="0" class="slide-img d-block w-100" />
                </div>
                <div class="carousel-item">
-                  <img src="./images/slide/slide_03.jpg" alt="slide" border="0" class="slide-img d-block w-100" />
+                  <img src="./images/slide/slide_02.jpg" alt="slide" border="0" class="slide-img d-block w-100" />
                </div>
                
                <div class="container__btn">
                   <a href="#productos_view"><button class="btn__products btn mt-3" >VER PRODUCTOS</button></a>
               </div> 
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching"
+            <button class="carousel-control-prev"  type="button" data-bs-target="#carouselExampleControlsNoTouching"
                data-bs-slide="prev">
                <span class="carousel-control-prev-icon" aria-hidden="true">
                   <img src="./images/icons/back.png" class="img-arrow"/>     
@@ -96,15 +96,17 @@
                   cuero, las cuales harán vestir tu casa.</span>
             </p>
          </div>
+<div class="detail__img__container">
          <div class="home-details__img-col-1">
             <img class="single-detail-img" src="./images/detalles/1.png" alt="detalles02" border="0" />
          </div>
          <div class="home-details__img-col-2">
             <img class="home-details__img-col-2_img1" src="./images/detalles/2.png" alt="detalles01"
-               border="0" />
+               border="0"  />
             <img class="home-details__img-col-2_img2" src="./images/detalles/3.png" alt="detalles03"
                border="0" />
          </div>
+      </div>
       </div>
    </section>
 
@@ -128,7 +130,7 @@
 
                 
             </div>
-         <div class="mt-4 row gx-0 gy-3 justify-content-center container" id="contenedorProductos">
+         <div class="mt-4 row gx-0 gy-3 justify-content-center " id="contenedorProductos">
 
          </div>
    </section>
@@ -137,7 +139,7 @@
    <section class="payment-shipment-container">
       <div class="payment-shipment__boxes shipment-box1">
          <img class="payment-shipment__boxes-img" src="./images/icons/creditcard.png" alt="" />
-         <div class="shipment-info-container">
+         <div class="shipment-info-container bajar">
             <h6 class="shipment-item-title">
                ACEPTAMOS TRANSFERENCIA BANCARIA Y MERCADO PAGO
             </h6>
