--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
    </nav>   
    <!-- Slide --> 
    <!-- carousel rompe el slide responsive -->
-      <header class="carousel slide SPA"> 
+      <header id="carousel-slide-container" class="carousel slide SPA"> 
          <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false"
             data-bs-interval="false">
             <div class="carousel-inner">
@@ -122,7 +122,7 @@
          <div class="row g-0">
             <div class="d-flex flex-wrap justify-content-center mt-5 filter-button-group">
 
-                <span type="button" class="m-2 text-dark filterBtn" id="filtroTodos">Todos</span>
+                <span type="button" class="m-2  text-dark filterBtn" id="filtroTodos">Todos</span>
 
                 <span type="button" class="m-2 text-dark filterBtn" id="filtroMadera">Madera</span>
 
