--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                <h4 class="footer-details__title">Seguinos</h4>
                <div class="footer-details__links">
                   <a href="https://instagram.com/elmalacara.handcrafted" target="__blank"><img class="footer-social" src="./images/icons/instagram.png" alt="Instagram" /></a>
-                  <a href="https://www.facebook.com/profile.php?id=100063442916645"><img class="footer-social" src="./images/icons/facebook.png" alt="Facebook" /></a>
+                  <a href="https://www.facebook.com/profile.php?id=100063442916645" target="__blank"><img class="footer-social" src="./images/icons/facebook.png" alt="Facebook" /></a>
                </div>
             </div>
          </div>
