--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </header>
    
    <!-- Whatsapp -->
-   <a href="https://api.whatsapp.com/send?phone=+5491128376428" target="_blank" class="btn-wsp">
+   <a href="https://api.whatsapp.com/send?phone=5491128376428" target="_blank" class="btn-wsp SPA">
       <img src="./images/icons/icon-wp.png" alt="" class="img_wsp" />
    </a>
 
